# ToDoList-Python-OOP

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 085021ba6daa_create_initial_projects_and_tasks_tables.py  2bab4dc4cf1d_implement_layered_architecture_and_.py  89059e17fe41_create_projects_and_tasks_tables.py  defcd57a3259_add_closed_at_to_task_model_and_.py
app/: main.py
app/cli/: console.py
app/commands/: autoclose_overdue.py  scheduler.py
app/db/: session.py
app/models/: __init__.py  project.py  task.py
app/repositories/: base.py  project_repository.py  task_repository.py
app/services/: project_service.py  task_service.py
scripts/: run_autoclose.sh
src/: db.py  schemas.py
src/api/v1/routers/: projects.py  tasks.py
src/cli/: console.py  interface.py
src/commands/: autoclose_overdue.py  scheduler.py
src/core/: models.py
src/db/: base.py  dependencies.py  session.py
src/exceptions/: base.py  repository_exceptions.py  service_exceptions.py
src/models/: project.py  task.py
src/repositories/: project_repository.py  task_repository.py
src/services/: project_service.py  task_service.py
src/storage/: in_memory.py  sqlalchemy_storage.py
tests/: test_task_autoclose.py
