[tool.poetry]
name = "todolist"
version = "0.2.0"
description = "ToDoList Phase 2 - Python OOP + PostgreSQL + SQLAlchemy + Alembic"
authors = ["rezahashemics"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0"
alembic = "^1.12"
psycopg2-binary = "^2.9"
python-dotenv = "^1.0"
click = "^8.1"
schedule = "^1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
