[tool.poetry]
name = "todolist"
version = "0.2.0"
description = "ToDoList Phase 2 - Postgres + SQLAlchemy + Alembic"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0"
alembic = "^1.11"
psycopg2-binary = "^2.9"
python-dotenv = "^1.0"
# click = "^8.1" # در این فاز ضرورتی ندارد
# schedule = "^1.2.0" # در این فاز ضرورتی ندارد

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
